firefox alignment issues

--- a/resident-ui/src/app/shared/header/header.component.css
+++ b/resident-ui/src/app/shared/header/header.component.css
@@ -95,6 +95,7 @@
 
 .mat-menu-item {
   overflow-wrap: break-word;
+  /* height: 40px; */
 }
 
 ::ng-deep .mat-menu-panel.zoommenu {
@@ -181,7 +182,6 @@
   }
   .mat-menu-item{
     padding: 0;
-    height: auto;
   }
   /* .notification-btn{
     width: 56px;
